[package]
name = "job_scheduler"
version = "1.3.0"
authors = ["Lori Holden <noreply@loriholden.com>", "Kotob <kotob@groovyantoid.com>"]
description = "A simple cron-like job scheduling library for Rust."

documentation = "https://docs.rs/job_scheduler/"
repository = "https://github.com/lholden/job_scheduler"
edition = "2018"

license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["cron", "crontab", "scheduler", "job", "tokio"]

categories = ["date-and-time"]

[dependencies]
cron = "~0.6"
chrono = "~0.4"
uuid = { version = "0.8.1", features = ["v4"] }
tokio = {version = "0.3.3", features = ["macros","rt-multi-thread"]}
futures = "0.3.*"